--- a/src/css/style.css
+++ b/src/css/style.css
@@ -249,4 +249,41 @@ body {
     font-size: 20px;
   }
 }
+
+.recipes__error {
+  padding: 10px;
+}
+
+.recipes__error h1 {
+  text-align: center;
+}
+
+.recipes__error p {
+  text-align: center;
+}
+
+.recipes__error p strong {
+  color: red;
+}
+
+@media (min-width: 0) {
+  .recipes__error h1 {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 480px) {
+  .recipes__error h1 {
+    font-size: 48px;
+  }
+  .recipes__error p {
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 720px) {
+  .recipes__error h1 {
+    font-size: 50px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
